# minecraft-renderer

./: .git-blame-ignore-revs  .prettierignore  .prettierrc.json  README.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  todo  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  deploy-pr.yml  release.yml
chunk-packet-fixtures/: bench-cold.cjs  bench-fullcolumn.cjs  bench-fused.cjs  bench-micro.cjs  bench.cjs  diff-vs-prismarine.cjs  dump-map-chunk.cjs  generate-fixtures-1.16.cjs  generate-fixtures-1.17.cjs  generate-fixtures.cjs  harness-1.17.cjs  harness-wasm.cjs  harness.cjs  parseDump-1.17.cjs  parseDump-1.18.cjs  parseLight-1.18.cjs
chunk-packet-fixtures/fixtures-1.16/: _summary.json  empty.json  (+3 more)
dump-poc/: bench.cjs  diff-fullcolumn.cjs  dump-map-chunk.cjs  generate-fixtures-1.16.cjs  generate-fixtures-1.17.cjs
public/: wasm_mesher.js  wasm_mesher_bg.wasm
scripts/: addTsNocheck.mjs  buildLib.mjs  buildMesherWorker.mjs  buildThreeWorker.mjs  buildWorkerShared.mjs  esbuildDataPlugin.mjs
src/: index.ts
wasm/: wasm_mesher.d.ts  wasm_mesher.js  wasm_mesher_bg.wasm  wasm_mesher_bg.wasm.d.ts
wasm-mesher/: .gitignore  Cargo.toml  README.md  build.mjs  build.sh  package.json  run.sh  test-chunk-shared.ts  test-chunk.ts  test-section-boundary.ts  test.html
wasm-mesher/src/: chunk.rs  chunk_parser_common.rs  dump_parser.rs  geometry.rs  lib.rs  lighting.rs  mesher.rs  parser_v16_v17.rs  parser_v17.rs  parser_v18plus.rs  utils.rs
wasm-mesher/tests/: test-chunk-shared.ts  test-chunk.ts  test-section-boundary.ts  test.html  test.sh
(+314 files in other folders)
